--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,81 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.11
+aiosignal==1.3.1
+alembic==1.14.1
+annotated-types==0.7.0
+appdirs==1.4.4
+async-timeout==5.0.1
+attrs==25.3.0
+banal==1.0.6
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.12.1
+dataset==1.6.2
+docker-pycreds==0.4.0
+eval_type_backport==0.2.2
+filelock==3.16.1
+fonttools==4.57.0
+frozenlist==1.5.0
+fsspec==2024.12.0
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.1.1
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+Jinja2==3.1.6
+joblib==1.4.2
 jsonargparse==4.28.0
+kiwisolver==1.4.7
 lightning==2.2.3
+lightning-utilities==0.11.9
+Mako==1.3.10
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mpmath==1.3.0
+multidict==6.1.0
+networkx==3.1
+numpy==1.24.4
+packaging==24.2
+pandas==2.0.3
+pillow==10.4.0
+platformdirs==4.3.6
+propcache==0.2.0
+protobuf==4.25.6
+psutil==7.0.0
+ptflops==0.7.3
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytorch-lightning==2.4.0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.3
+scikit-learn==1.3.2
+scipy==1.10.1
 seaborn==0.13.2
+sentry-sdk==2.26.1
+setproctitle==1.3.5
+six==1.17.0
+smmap==5.0.2
+SQLAlchemy==1.4.54
+sympy==1.13.3
 tabulate==0.9.0
 termcolor==2.4.0
-torch==2.2.2
+threadpoolctl==3.5.0
+torch==2.4.1+cu121
+torchaudio==2.4.1+cu121
 torchmetrics==1.3.2
-torchvision==0.17.2
+torchvision==0.19.1+cu121
 tqdm==4.66.2
-wandb==0.16.6
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.2.3
+wandb==0.19.9
 wget==3.2
+yarl==1.15.2
+zipp==3.20.2
